feat: refactor http files
